fixed bug with dumbell's scroll visible in landscape mode

--- a/main.scss
+++ b/main.scss
@@ -95,7 +95,7 @@ nav {
 
     li {
       padding: 1rem;
-
+      overflow: hidden;
       a {
         font-size: 1.6rem;
         text-decoration: none;
